@@ -1,3 +1,8 @@
+2011-12-02  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-maybe-open-connection): Handle user
+	interrupt.  (Bug#10187)
+
 2011-11-24  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-save-ad-hoc-proxies): New defcustom.
